--- a/app.json
+++ b/app.json
@@ -21,4 +21,10 @@
     }
   },
   "stack": "container"
+  "formation": {
+          "worker": {
+              "quantity": 1,
+              "size": "free"
+          }
+      }
 }
