--- a/app.json
+++ b/app.json
@@ -22,8 +22,7 @@
   },
   "formation": {
        "worker": {
-       "quantity": 1,
-       "size": "free"
+       "quantity": 1
     }
   },
   "stack": "container"
