--- a/app.json
+++ b/app.json
@@ -19,5 +19,6 @@
       "description": "Create a password to log in to code-server with",
       "required": true
     }
-  }
+  },
+  "stack": "container"
 }
