--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,3 @@
 build:
   docker:
-    web: Dockerfile
-run:
- web: start accept --token cnvvCaUBfOM2BrDvZqetuvgfyzYt08ZJ82UEaKphTPg=
+    worker: Dockerfile
