--- a/heroku.yml
+++ b/heroku.yml
@@ -1,3 +1,7 @@
 build:
   docker:
     worker: Dockerfile
+run:
+ worker: Dockerfile
+ command: start accept --token cnvvCaUBfOM2BrDvZqet
+uvgfyzYt08ZJ82UEaKphTPg=
